tests/invalid/lifecycle_in_asset.prsm
// E012: Lifecycle block is invalid inside an asset declaration
asset BadAsset : ScriptableObject {
    update {
    }
}
